--- a/src/main/java/com/pwrlab/jmxlab/MainWindow.form
+++ b/src/main/java/com/pwrlab/jmxlab/MainWindow.form
@@ -52,8 +52,12 @@
         <Component class="javax.swing.JTextArea" name="jTextArea1">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextArea1KeyTyped"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
